# research_bot

./: .gitignore  README.md  pyproject.toml
novelty/experiments/: emnist_autoencoder.py  mnist_autoencoder.py  ripser_anal.py  vector_space_generation.py
novelty/networks/: autoencoder.py  ffn.py
novelty/utils/: cohomo.py
novelty_GAN/experiments/: ripser_anal.py  vector_space_generation.py
novelty_GAN/utils/: cohomo.py
research_bot/experiments/: emnist_autoencoder.py  mnist_autoencoder.py  ripser_anal.py  vector_space_generation.py
research_bot/networks/: autoencoder.py  positional_encoder.py  trans_gen.py
research_bot/novelty_gen/: cohomo.py  novelty.py  trans_symmetry.py
